Fix logo overflow on resize

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ main {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+  overflow: hidden;
   flex: 1;
 }
 
